--- a/public/index.html
+++ b/public/index.html
@@ -4,9 +4,13 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Document</title>
+    <link rel="stylesheet" href="../src/style/style.scss">
+    <link rel="shortcut icon" href="https://umino-demo.myshopify.com/cdn/shop/files/Favicon_971b4ca4-74dd-4ba9-b347-20c2dae81f9d.png?crop=center&height=32&v=1680319767&width=32" type="image/x-icon">
+    <title>Umino-Multipurpose Shopify Themes</title>
 </head>
 <body>
     
+
+    <script src="../src/js/app.js"></script>
 </body>
 </html>
