--- a/public/index.html
+++ b/public/index.html
@@ -4,13 +4,38 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/style/style.scss">
+    <link rel="stylesheet" href="../src/scss/style.css">
+    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
     <link rel="shortcut icon" href="https://umino-demo.myshopify.com/cdn/shop/files/Favicon_971b4ca4-74dd-4ba9-b347-20c2dae81f9d.png?crop=center&height=32&v=1680319767&width=32" type="image/x-icon">
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
     <title>Umino-Multipurpose Shopify Themes</title>
 </head>
 <body>
+    <header>
+        <div class="head-top">
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-4 mt-2 mb-2">
+                        <div class="head-contact">
+                            <span class="tel">+222-1800-2628 </span>
+                            <span class="email-contact">blueskytechcompany@gmail.com </span>
+                        </div>
+                    </div>
+                    <div class="col-xl-8 mt-2 mb-2">
+                        <div class="language">
+                            <span class="stores">Our Stores </span>
+                            <span class="united">United States (USD$) <i class="bi bi-chevron-down"></i></span>
+                            <span class="english">English <i class="bi bi-chevron-down"></i></span>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </header>
     
 
     <script src="../src/js/app.js"></script>
+    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
+<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
 </body>
 </html>
