--- a/public/index.html
+++ b/public/index.html
@@ -31,6 +31,49 @@
                 </div>
             </div>
         </div>
+        <nav>
+            <div class="container">
+                <div class="row">
+                    <div class="col-xl-2 my-3">
+                        <div class="page-logo">
+                            <a href="../public/index.html"><img src="https://umino-demo.myshopify.com/cdn/shop/files/logo_e.png?v=1680843449&width=165" alt="pagelogo"></a>
+                        </div>
+                    </div>
+                    <div class="col-xl-6 my-3">
+                        <form>
+                            <input type="search" name="search" id="search" class="search" placeholder="I'm looking for…">
+                            <button class="submit">Search</button>
+                            <i class="bi bi-search"></i>
+                        </form>
+                    </div>
+                    <div class="col-xl-4 my-3">
+                        <div class="nav-left">
+                            <div class="acount">
+                                <i class="bi bi-person"></i>
+                                <p class="acountorlogin">
+                                    <span class="login">Log in</span>
+                                    <span class="account">Account</span>
+                                </p>
+                            </div>
+                            <div class="heart">
+                                <i class="bi bi-heart"></i>
+                                <p class="zero">
+                                    0
+                                </p>
+                            </div>
+                            <div class="shop">
+                                <i class="bi bi-cart"></i>
+                                <p class="acountorlogin">
+                                    <span class="login">Cart</span>
+                                    <span class="account">$0.00</span>
+                                </p>
+                                <h3 class="zero1">0</h3>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </nav>
     </header>
     
 
