--- a/public/index.html
+++ b/public/index.html
@@ -1,84 +1,146 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <link rel="stylesheet" href="../src/scss/style.css">
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65" crossorigin="anonymous">
-    <link rel="shortcut icon" href="https://umino-demo.myshopify.com/cdn/shop/files/Favicon_971b4ca4-74dd-4ba9-b347-20c2dae81f9d.png?crop=center&height=32&v=1680319767&width=32" type="image/x-icon">
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="stylesheet" href="../src/scss/style.css" />
+    <link
+      href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/css/bootstrap.min.css"
+      rel="stylesheet"
+      integrity="sha384-rbsA2VBKQhggwzxH7pPCaAqO46MgnOM80zW1RWuH61DGLwZJEdK2Kadq2F9CUG65"
+      crossorigin="anonymous"
+    />
+    <link
+      rel="shortcut icon"
+      href="https://umino-demo.myshopify.com/cdn/shop/files/Favicon_971b4ca4-74dd-4ba9-b347-20c2dae81f9d.png?crop=center&height=32&v=1680319767&width=32"
+      type="image/x-icon"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.10.5/font/bootstrap-icons.css"
+    />
     <title>Umino-Multipurpose Shopify Themes</title>
-</head>
-<body>
+  </head>
+  <body>
     <header>
-        <div class="head-top">
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-4 mt-2 mb-2">
-                        <div class="head-contact">
-                            <span class="tel">+222-1800-2628 </span>
-                            <span class="email-contact">blueskytechcompany@gmail.com </span>
-                        </div>
-                    </div>
-                    <div class="col-xl-8 mt-2 mb-2">
-                        <div class="language">
-                            <span class="stores">Our Stores </span>
-                            <span class="united">United States (USD$) <i class="bi bi-chevron-down"></i></span>
-                            <span class="english">English <i class="bi bi-chevron-down"></i></span>
-                        </div>
-                    </div>
-                </div>
+      <div class="head-top">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-4 mt-2 mb-2">
+              <div class="head-contact">
+                <span class="tel">+222-1800-2628 </span>
+                <span class="email-contact">blueskytechcompany@gmail.com </span>
+              </div>
             </div>
+            <div class="col-xl-8 mt-2 mb-2">
+              <div class="language">
+                <span class="stores">Our Stores </span>
+                <span class="united"
+                  >United States (USD$) <i class="bi bi-chevron-down"></i
+                ></span>
+                <span class="english"
+                  >English <i class="bi bi-chevron-down"></i
+                ></span>
+              </div>
+            </div>
+          </div>
         </div>
-        <nav>
-            <div class="container">
-                <div class="row">
-                    <div class="col-xl-2 my-3">
-                        <div class="page-logo">
-                            <a href="../public/index.html"><img src="https://umino-demo.myshopify.com/cdn/shop/files/logo_e.png?v=1680843449&width=165" alt="pagelogo"></a>
-                        </div>
-                    </div>
-                    <div class="col-xl-6 my-3">
-                        <form>
-                            <input type="search" name="search" id="search" class="search" placeholder="I'm looking for…">
-                            <button class="submit">Search</button>
-                            <i class="bi bi-search"></i>
-                        </form>
-                    </div>
-                    <div class="col-xl-4 my-3">
-                        <div class="nav-left">
-                            <div class="acount">
-                                <i class="bi bi-person"></i>
-                                <p class="acountorlogin">
-                                    <span class="login">Log in</span>
-                                    <span class="account">Account</span>
-                                </p>
-                            </div>
-                            <div class="heart">
-                                <i class="bi bi-heart"></i>
-                                <p class="zero">
-                                    0
-                                </p>
-                            </div>
-                            <div class="shop">
-                                <i class="bi bi-cart"></i>
-                                <p class="acountorlogin">
-                                    <span class="login">Cart</span>
-                                    <span class="account">$0.00</span>
-                                </p>
-                                <h3 class="zero1">0</h3>
-                            </div>
-                        </div>
-                    </div>
+      </div>
+      <nav>
+        <div class="nav-top">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-2 my-3">
+                <div class="page-logo">
+                  <a href="../public/index.html"
+                    ><img
+                      src="https://umino-demo.myshopify.com/cdn/shop/files/logo_e.png?v=1680843449&width=165"
+                      alt="pagelogo"
+                  /></a>
                 </div>
+              </div>
+              <div class="col-xl-6 my-3">
+                <form>
+                  <input
+                    type="search"
+                    name="search"
+                    id="search"
+                    class="search"
+                    placeholder="I'm looking for…"
+                  />
+                  <button class="submit">Search</button>
+                  <i class="bi bi-search"></i>
+                </form>
+              </div>
+              <div class="col-xl-4 my-3">
+                <div class="nav-left">
+                  <div class="acount">
+                    <i class="bi bi-person"></i>
+                    <p class="acountorlogin">
+                      <span class="login">Log in</span>
+                      <span class="account">Account</span>
+                    </p>
+                  </div>
+                  <div class="heart">
+                    <i class="bi bi-heart"></i>
+                    <p class="zero">0</p>
+                  </div>
+                  <div class="shop">
+                    <i class="bi bi-cart"></i>
+                    <p class="acountorlogin">
+                      <span class="login">Cart</span>
+                      <span class="account">$0.00</span>
+                    </p>
+                    <h3 class="zero1">0</h3>
+                  </div>
+                </div>
+              </div>
             </div>
-        </nav>
+          </div>
+        </div>
+        <div class="nav-bottom">
+          <div class="container">
+            <div class="row">
+              <div class="col-xl-3 my-3">
+                <div class="departments">
+                  
+                  <h3><i class="bi bi-list"></i>All Departments</h3>
+                  <i class="bi bi-chevron-down"></i>
+                </div>
+              </div>
+              <div class="col-xl-6 my-3">
+                <ul>
+                    <li class="home">Home<i class="bi bi-chevron-down"></i></li>
+                    <li class="shop">Shop<i class="bi bi-chevron-down"></i></li>
+                    <li class="product">Product<i class="bi bi-chevron-down"></i></li>
+                    <li class="blog">Blog<i class="bi bi-chevron-down"></i></li>
+                    <li class="page">Page<i class="bi bi-chevron-down"></i></li>
+                    <li class="buy">Buy Umino!</li>
+                 </ul>
+              </div>
+              <div class="col-xl-3 my-3">
+                <div class="recently">
+                    <i class="bi bi-clock"></i>
+                    <h4>Recently viewed products</h4>
+                </div>
+              </div>
+            </div>
+          </div>
+        </div>
+      </nav>
     </header>
-    
 
     <script src="../src/js/app.js"></script>
-    <script src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js" integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3" crossorigin="anonymous"></script>
-<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js" integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V" crossorigin="anonymous"></script>
-</body>
+    <script
+      src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
+      integrity="sha384-oBqDVmMz9ATKxIep9tiCxS/Z9fNfEXiDAYTujMAeBAsjFuCZSmKbSSUnQlmh/jp3"
+      crossorigin="anonymous"
+    ></script>
+    <script
+      src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.3/dist/js/bootstrap.min.js"
+      integrity="sha384-cuYeSxntonz0PPNlHhBs68uyIAVpIIOZZ5JqeqvYYIcEL727kskC66kF92t6Xl2V"
+      crossorigin="anonymous"
+    ></script>
+  </body>
 </html>
