--- a/public/index.html
+++ b/public/index.html
@@ -39,9 +39,16 @@
                 <span class="united"
                   >United States (USD$) <i class="bi bi-chevron-down"></i
                 ></span>
-                <span class="english"
+                <span class="english englishclick"
                   >English <i class="bi bi-chevron-down"></i
-                ></span>
+                >
+                <ul class="eng-hover eng-list">
+                  <li class="element1">English</li>
+                  <li class="element1">Nederlands</li>
+                  <li class="element1">Français</li>
+                  <li class="element1">日本語</li>
+                </ul>
+              </span>
               </div>
             </div>
           </div>
@@ -104,25 +111,26 @@
             <div class="row">
               <div class="col-xl-3 my-3">
                 <div class="departments">
-                  
                   <h3><i class="bi bi-list"></i>All Departments</h3>
                   <i class="bi bi-chevron-down"></i>
                 </div>
               </div>
               <div class="col-xl-6 my-3">
                 <ul>
-                    <li class="home">Home<i class="bi bi-chevron-down"></i></li>
-                    <li class="shop">Shop<i class="bi bi-chevron-down"></i></li>
-                    <li class="product">Product<i class="bi bi-chevron-down"></i></li>
-                    <li class="blog">Blog<i class="bi bi-chevron-down"></i></li>
-                    <li class="page">Page<i class="bi bi-chevron-down"></i></li>
-                    <li class="buy">Buy Umino!</li>
-                 </ul>
+                  <li class="home">Home<i class="bi bi-chevron-down"></i></li>
+                  <li class="shop">Shop<i class="bi bi-chevron-down"></i></li>
+                  <li class="product">
+                    Product<i class="bi bi-chevron-down"></i>
+                  </li>
+                  <li class="blog">Blog<i class="bi bi-chevron-down"></i></li>
+                  <li class="page">Page<i class="bi bi-chevron-down"></i></li>
+                  <li class="buy">Buy Umino!</li>
+                </ul>
               </div>
               <div class="col-xl-3 my-3">
                 <div class="recently">
-                    <i class="bi bi-clock"></i>
-                    <h4>Recently viewed products</h4>
+                  <i class="bi bi-clock"></i>
+                  <h4>Recently viewed products</h4>
                 </div>
               </div>
             </div>
