--- a/public/index.html
+++ b/public/index.html
@@ -138,7 +138,56 @@
         </div>
       </nav>
     </header>
-
+   <main>
+    <section id="banner">
+      <div class="container">
+        <div class="row">
+           <div class="col-xl-12 g-4">
+            <div id="carouselExampleDark" class="carousel carousel-dark slide">
+            
+              <div class="carousel-inner">
+                <div class="carousel-item active" data-bs-interval="10000">
+                  <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-slide2.jpg?v=1681376542&width=2000" class="d-block w-100" alt="...">
+                  <div class="carousel-text">
+                    <p>Top Offer</p>
+                    <h2>Camera Smart GP5</h2>
+                    <h4>Limited Time: Online Only!</h4>
+                    <h3>Shop now</h3>
+                  </div>
+                </div>
+                <div class="carousel-item" data-bs-interval="2000">
+                  <img src="https://umino-demo.myshopify.com/cdn/shop/files/digit1-slide.jpg?v=1681540748&width=2000" class="d-block w-100" alt="...">
+                  <div class="carousel-text">
+                    <p>Top Offer</p>
+                    <h2>Camera Smart GP5</h2>
+                    <h4>Limited Time: Online Only!</h4>
+                    <h3>Shop now</h3>
+                  </div>
+                </div>
+                <div class="carousel-item">
+                  <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-slide3.jpg?v=1681376596&width=2000" class="d-block w-100" alt="...">
+                  <div class="carousel-text">
+                    <p>Top Offer</p>
+                    <h2>Camera Smart GP5</h2>
+                    <h4>Limited Time: Online Only!</h4>
+                    <h3>Shop now</h3>
+                  </div>
+                </div>
+              </div>
+              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
+                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Previous</span>
+              </button>
+              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
+                <span class="carousel-control-next-icon" aria-hidden="true"></span>
+                <span class="visually-hidden">Next</span>
+              </button>
+            </div>
+           </div>
+        </div>
+      </div>
+    </section>
+   </main>
     <script src="../src/js/app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
