--- a/public/index.html
+++ b/public/index.html
@@ -40,15 +40,14 @@
                   >United States (USD$) <i class="bi bi-chevron-down"></i
                 ></span>
                 <span class="english englishclick"
-                  >English <i class="bi bi-chevron-down"></i
-                >
-                <ul class="eng-hover eng-list">
-                  <li class="element1">English</li>
-                  <li class="element1">Nederlands</li>
-                  <li class="element1">Français</li>
-                  <li class="element1">日本語</li>
-                </ul>
-              </span>
+                  >English <i class="bi bi-chevron-down"></i>
+                  <ul class="eng-hover eng-list">
+                    <li class="element1">English</li>
+                    <li class="element1">Nederlands</li>
+                    <li class="element1">Français</li>
+                    <li class="element1">日本語</li>
+                  </ul>
+                </span>
               </div>
             </div>
           </div>
@@ -138,56 +137,381 @@
         </div>
       </nav>
     </header>
-   <main>
-    <section id="banner">
-      <div class="container">
-        <div class="row">
-           <div class="col-xl-12 g-4">
-            <div id="carouselExampleDark" class="carousel carousel-dark slide">
-            
-              <div class="carousel-inner">
-                <div class="carousel-item active" data-bs-interval="10000">
-                  <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-slide2.jpg?v=1681376542&width=2000" class="d-block w-100" alt="...">
-                  <div class="carousel-text">
-                    <p>Top Offer</p>
-                    <h2>Camera Smart GP5</h2>
-                    <h4>Limited Time: Online Only!</h4>
-                    <h3>Shop now</h3>
+    <main>
+      <section id="banner">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-12 g-4">
+              <div
+                id="carouselExampleDark"
+                class="carousel carousel-dark slide"
+              >
+                <div class="carousel-inner">
+                  <div class="carousel-item active" data-bs-interval="10000">
+                    <img
+                      src="https://umino-demo.myshopify.com/cdn/shop/files/h13-slide2.jpg?v=1681376542&width=2000"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <div class="carousel-text">
+                      <p>Top Offer</p>
+                      <h2>Camera Smart GP5</h2>
+                      <h4>Limited Time: Online Only!</h4>
+                      <h3>Shop now</h3>
+                    </div>
+                  </div>
+                  <div class="carousel-item" data-bs-interval="2000">
+                    <img
+                      src="https://umino-demo.myshopify.com/cdn/shop/files/digit1-slide.jpg?v=1681540748&width=2000"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <div class="carousel-text">
+                      <p>Top Offer</p>
+                      <h2>Camera Smart GP5</h2>
+                      <h4>Limited Time: Online Only!</h4>
+                      <h3>Shop now</h3>
+                    </div>
+                  </div>
+                  <div class="carousel-item">
+                    <img
+                      src="https://umino-demo.myshopify.com/cdn/shop/files/h13-slide3.jpg?v=1681376596&width=2000"
+                      class="d-block w-100"
+                      alt="..."
+                    />
+                    <div class="carousel-text">
+                      <p>Top Offer</p>
+                      <h2>Camera Smart GP5</h2>
+                      <h4>Limited Time: Online Only!</h4>
+                      <h3>Shop now</h3>
+                    </div>
                   </div>
                 </div>
-                <div class="carousel-item" data-bs-interval="2000">
-                  <img src="https://umino-demo.myshopify.com/cdn/shop/files/digit1-slide.jpg?v=1681540748&width=2000" class="d-block w-100" alt="...">
-                  <div class="carousel-text">
-                    <p>Top Offer</p>
-                    <h2>Camera Smart GP5</h2>
-                    <h4>Limited Time: Online Only!</h4>
-                    <h3>Shop now</h3>
-                  </div>
-                </div>
-                <div class="carousel-item">
-                  <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-slide3.jpg?v=1681376596&width=2000" class="d-block w-100" alt="...">
-                  <div class="carousel-text">
-                    <p>Top Offer</p>
-                    <h2>Camera Smart GP5</h2>
-                    <h4>Limited Time: Online Only!</h4>
-                    <h3>Shop now</h3>
-                  </div>
-                </div>
+                <button
+                  class="carousel-control-prev"
+                  type="button"
+                  data-bs-target="#carouselExampleDark"
+                  data-bs-slide="prev"
+                >
+                  <span
+                    class="carousel-control-prev-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Previous</span>
+                </button>
+                <button
+                  class="carousel-control-next"
+                  type="button"
+                  data-bs-target="#carouselExampleDark"
+                  data-bs-slide="next"
+                >
+                  <span
+                    class="carousel-control-next-icon"
+                    aria-hidden="true"
+                  ></span>
+                  <span class="visually-hidden">Next</span>
+                </button>
               </div>
-              <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="prev">
-                <span class="carousel-control-prev-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Previous</span>
-              </button>
-              <button class="carousel-control-next" type="button" data-bs-target="#carouselExampleDark" data-bs-slide="next">
-                <span class="carousel-control-next-icon" aria-hidden="true"></span>
-                <span class="visually-hidden">Next</span>
-              </button>
             </div>
+          </div>
+        </div>
+      </section>
+      <section id="products">
+        <div class="container">
+          <div class="row">
+             <div class="col-xl-12">
+               <div class="elements">
+                <div class="product1">
+                  <div class="product-img">
+                    <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-cate1.jpg?v=1681537414" alt="product">
+                  </div>
+                  <div class="product-text">
+                    <p>Macbook/PCs</p>
+                    <h2>15 Products</h2>
+                  </div>
+               </div>
+                <div class="product1">
+                  <div class="product-img">
+                    <img src="	https://umino-demo.myshopify.com/cdn/shop/files/h13-cate2.jpg?v=1681537426" alt="product">
+                  </div>
+                  <div class="product-text">
+                    <p>Macbook/PCs</p>
+                    <h2>15 Products</h2>
+                  </div>
+               </div>
+                <div class="product1">
+                  <div class="product-img">
+                    <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-cate3.jpg?v=1681537434" alt="product">
+                  </div>
+                  <div class="product-text">
+                    <p>Macbook/PCs</p>
+                    <h2>15 Products</h2>
+                  </div>
+               </div>
+                <div class="product1">
+                  <div class="product-img">
+                    <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-cate4.jpg?v=1681537443" alt="product">
+                  </div>
+                  <div class="product-text">
+                    <p>Macbook/PCs</p>
+                    <h2>15 Products</h2>
+                  </div>
+               </div>
+                <div class="product1">
+                  <div class="product-img">
+                    <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-cate5.jpg?v=1681537457" alt="product">
+                  </div>
+                  <div class="product-text">
+                    <p>Macbook/PCs</p>
+                    <h2>15 Products</h2>
+                  </div>
+               </div>
+                <div class="product1">
+                  <div class="product-img">
+                    <img src="	https://umino-demo.myshopify.com/cdn/shop/files/h13-cate6.jpg?v=1681537465" alt="product">
+                  </div>
+                  <div class="product-text">
+                    <p>Macbook/PCs</p>
+                    <h2>15 Products</h2>
+                  </div>
+               </div>
+                <div class="product1">
+                  <div class="product-img">
+                    <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-cate7.jpg?v=1681537475" alt="product">
+                  </div>
+                  <div class="product-text">
+                    <p>Macbook/PCs</p>
+                    <h2>15 Products</h2>
+                  </div>
+               </div>
+                <div class="product1">
+                  <div class="product-img">
+                    <img src="https://umino-demo.myshopify.com/cdn/shop/files/h13-cate8.jpg?v=1681537488" alt="product">
+                  </div>
+                  <div class="product-text">
+                    <p>Macbook/PCs</p>
+                    <h2>15 Products</h2>
+                  </div>
+               </div>
+               </div>
+             </div>
+          </div>
+        </div>
+      </section>
+      <section id="inner">
+        <div class="container">
+           <div class="row">
+            <div class="col-xl-12">
+               <div class="deal-text">
+                  <p>Deals & Promotions</p>
+               </div>
+            </div>
+             <div class="col-xl-4">
+                <div class="cyber">
+                   <div class="cyber-img">
+                       <img src="https://umino-demo.myshopify.com/cdn/shop/files/4_e1.jpg?v=1680843302&width=533" alt="cyber">
+                   </div>
+                   <div class="cyber-text">
+                      <p>Cyber Monday - Save $599 On Speaker</p>
+                      <h3>Save 50% on order more than $99. Delivery in 1 days. Apply for the first 1k Customers.</h3>
+                   </div>
+                </div>
+             </div>
+             <div class="col-xl-4">
+                <div class="cyber">
+                   <div class="cyber-img">
+                       <img src="	https://umino-demo.myshopify.com/cdn/shop/files/5_e1.jpg?v=1680843302&width=533" alt="cyber">
+                   </div>
+                   <div class="cyber-text">
+                      <p>Sale Off Unlimited - Buy 1 Get 2</p>
+                      <h3>Save 80% on order more than $599. Delivery in 1 days. Apply for the first 1k Customers.</h3>
+                   </div>
+                </div>
+             </div>
+             <div class="col-xl-4">
+                <div class="cyber">
+                   <div class="cyber-img">
+                       <img src="https://umino-demo.myshopify.com/cdn/shop/files/6_e1.jpg?v=1680843302&width=533" alt="cyber">
+                   </div>
+                   <div class="cyber-text">
+                      <p>Hurry Up - Smartphone Only $299</p>
+                      <h3>All smartphone products at the same price $299. Delivery in 1 days. Apply for the first 1k Customers.</h3>
+                   </div>
+                </div>
+             </div>
            </div>
         </div>
+      </section>
+      <section id="shopify">
+        <div class="container">
+           <div class="row">
+              <div class="col-xl-3">
+                 <div class="fast">
+                    <div class="fast-img">
+                       <img src="https://umino-demo.myshopify.com/cdn/shop/files/cms1_e1.png?v=1680840344" alt="fast">
+                    </div>
+                    <div class="fast-text">
+                        <p>Fast Delivery</p>
+                        <h2>Deliver in 24 hours max!</h2>
+                    </div>
+                 </div>
+              </div>
+              <div class="col-xl-3">
+                 <div class="fast">
+                    <div class="fast-img">
+                       <img src="	https://umino-demo.myshopify.com/cdn/shop/files/cms2_e1.png?v=1680840344" alt="fast">
+                    </div>
+                    <div class="fast-text">
+                        <p>Fast Delivery</p>
+                        <h2>Deliver in 24 hours max!</h2>
+                    </div>
+                 </div>
+              </div>
+              <div class="col-xl-3">
+                 <div class="fast">
+                    <div class="fast-img">
+                       <img src="https://umino-demo.myshopify.com/cdn/shop/files/cms3_e1.png?v=1680840344" alt="fast">
+                    </div>
+                    <div class="fast-text">
+                        <p>Fast Delivery</p>
+                        <h2>Deliver in 24 hours max!</h2>
+                    </div>
+                 </div>
+              </div>
+              <div class="col-xl-3">
+                 <div class="fast">
+                    <div class="fast-img">
+                       <img src="	https://umino-demo.myshopify.com/cdn/shop/files/cms4_e1.png?v=1680840344" alt="fast">
+                    </div>
+                    <div class="fast-text">
+                        <p>Fast Delivery</p>
+                        <h2>Deliver in 24 hours max!</h2>
+                    </div>
+                 </div>
+              </div>
+           </div>
+        </div>
+      </section>
+    </main>
+    <footer>
+      <div class="footone">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-12">
+              <div class="foot-top">
+                <p>Sign Up to Newsletter</p>
+                <h3 class="order">
+                  Enter your email address to get $10 off your first order and
+                  free shipping.
+                </h3>
+                <h3 class="updates">
+                  Updates information on Sales and Offers.
+                </h3>
+                <form>
+                  <input
+                    type="email"
+                    name="emails"
+                    id="emails"
+                    class="emails"
+                    placeholder="Your email address..."
+                  />
+                  <button class="sub" type="submit">Subscribe</button>
+                </form>
+              </div>
+            </div>
+            <div class="col-xl-4">
+              <div class="contact">
+                <p>Contact Us</p>
+                <h2>Got Question? Call us 24/7</h2>
+                <h3>+222-1800-2628</h3>
+                <h4>268 St, South New York/NY 98944, United States.</h4>
+                <h5>blueskytechcompany@gmail.com</h5>
+                <div class="social-media">
+                  <h6><i class="bi bi-twitter"></i></h6>
+                  <h6><i class="bi bi-facebook"></i></h6>
+                  <h6><i class="bi bi-pinterest"></i></h6>
+                  <h6><i class="bi bi-instagram"></i></h6>
+                  <h6><i class="bi bi-youtube"></i></h6>
+                  <h6><i class="bi bi-tiktok"></i></h6>
+                </div>
+              </div>
+            </div>
+            <div class="col-xl-2">
+              <div class="company">
+                <p>Company</p>
+                <ul>
+                  <li>About Us</li>
+                  <li>Our Stores</li>
+                  <li>Contact us</li>
+                  <li>Size Guide</li>
+                  <li>My Account</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-xl-2">
+              <div class="company">
+                <p>Customer Service</p>
+                <ul>
+                  <li>About Us</li>
+                  <li>Our Stores</li>
+                  <li>Contact us</li>
+                  <li>Size Guide</li>
+                  <li>My Account</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-xl-2">
+              <div class="company">
+                <p>Shop By Categories</p>
+                <ul>
+                  <li>About Us</li>
+                  <li>Our Stores</li>
+                  <li>Contact us</li>
+                  <li>Size Guide</li>
+                  <li>My Account</li>
+                </ul>
+              </div>
+            </div>
+            <div class="col-xl-2">
+              <div class="company">
+                <p>Useful Links</p>
+                <ul>
+                  <li>About Us</li>
+                  <li>Our Stores</li>
+                  <li>Contact us</li>
+                  <li>Size Guide</li>
+                  <li>My Account</li>
+                </ul>
+              </div>
+            </div>
+          </div>
+        </div>
       </div>
-    </section>
-   </main>
+      <div class="foottwo">
+        <div class="container">
+          <div class="row">
+            <div class="col-xl-3">
+              <div class="footlang">
+                <p class="englang">English<i class="bi bi-chevron-down"></i></p>
+                <p class="unilang">
+                  United States<i class="bi bi-chevron-down"></i>
+                </p>
+              </div>
+            </div>
+            <div class="col-xl-5">
+              <div class="reserved">
+                 <p>Copyright © Uminex all rights reserved. Powered by Blueskytechco.</p>
+              </div>
+            </div>
+            <div class="col-xl-4">
+               <div class="pay-img">
+                  <img src="https://umino-demo.myshopify.com/cdn/shop/files/d_payment.png?v=1681262438&width=360" alt="pay">
+               </div>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
     <script src="../src/js/app.js"></script>
     <script
       src="https://cdn.jsdelivr.net/npm/@popperjs/core@2.11.6/dist/umd/popper.min.js"
